<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:id="@+id/ll_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo_app"
            android:layout_width="120dp"
            android:layout_height="66dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/img_logo_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/text_judul"
            android:textColor="@color/app_color_on_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_utama"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded_top"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_judul">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/formUsernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    tools:visibility="visible">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:background="@drawable/background_rounded"
                        android:paddingHorizontal="14dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/formEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    tools:visibility="visible">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:background="@drawable/background_rounded"
                        android:paddingHorizontal="14dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/formPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_password"
                    android:textSize="12sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    tools:visibility="visible">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:background="@drawable/background_rounded"
                        android:inputType="textPassword"
                        android:paddingHorizontal="12dp"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_syarat"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/background_rounded"
                android:text="@string/text_create"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@color/app_color_secondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:text="@string/text_opsi_lain"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@color/app_color_secondary" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/img_logo_google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/img_logo_twitter" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_logo_apple" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            android:backgroundTint="@color/app_color_primary"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_nav_login"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_rounded"
                android:gravity="center"
                android:text="@string/text_login"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nav_register"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/background_rounded"
                android:gravity="center"
                android:text="@string/text_register"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>