<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.DetailRegisterFragment">

    <TextView
        android:id="@+id/text_register_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/text_register_success"
        android:textColor="@color/success"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/resultTable"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/resultTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/app_color_primary"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_register_success">

        <TableRow
            android:id="@+id/usernameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color_primary">

            <TextView
                android:id="@+id/labelUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/text_username"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/emailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color_primary">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/text_email"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/passwordRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color_primary">

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/text_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
